--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,22 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light{
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: rgb(211, 219, 132);
+}
+.red {background: red; margin-bottom: 5px;}
+.yellow {background: yellow; margin-bottom: 5px;}   
+.green {background: green; margin-bottom: 5px;}
+.glow { 
+    box-shadow: 0px 0px 20px 8px #c8cada;
+}
